--- a/05_projects/BlazorInterAutoProj/Components/Pages/Home.razor
+++ b/05_projects/BlazorInterAutoProj/Components/Pages/Home.razor
@@ -43,6 +43,9 @@
 
     protected async Task ReloadItem((string Repo, string Loca) address)
     {
+        name = "";
+        body = "";
+
         var itemJString = GetItem(address);
         var itemObj = JsonConvert.DeserializeObject<ItemModel2>(itemJString);
 
