--- a/05_projects/BlazorInterAutoProj/Components/Editor/FolderView.razor
+++ b/05_projects/BlazorInterAutoProj/Components/Editor/FolderView.razor
@@ -7,6 +7,12 @@
 
 @rendermode InteractiveServer
 
+<input type="button" value="Add" @onclick="OnAddClicked" />
+<input type="text" @bind=@formAddValue>
+
+<div>
+    <input type="button" value="Folder" @onclick="OnFolderClicked" />
+</div>
 @if (Item?.Type == myType)
 {
    @foreach (var indexQname in GetIndexQnameDict())
@@ -19,13 +25,14 @@
    }
 }
 
-
 @code {
     [Parameter]
     public ItemModel2 Item { get; set; }
 
     [Parameter]
     public Action<ItemModel2, bool> ReloadItem { get; set; }
+
+    private string formAddValue;
 
     private Dictionary<string, string> indexQnameDict;
     private string myType = "Folder";
@@ -62,6 +69,28 @@
         }
 
         return default;
+    }
+
+    
+    private void OnAddClicked()
+    {
+        if (string.IsNullOrEmpty(formAddValue))
+        {
+            return;
+        }
+
+        var adrTuple = fileService.RepoAddress
+             .CreateAddressFromString(Item.Address);
+        var itemJson = backendService
+            .CommandApi("CreateItem", adrTuple.Item1, adrTuple.Item2, formAddValue, "Folder");
+    }
+
+    private void OnFolderClicked()
+    {
+        var adrTuple = fileService.RepoAddress
+             .CreateAddressFromString(Item.Address);
+        var itemJson = backendService
+            .CommandApi("OpenFolder", adrTuple.Item1, adrTuple.Item2);
     }
 
     private void OnBtnClicked(string idxString)
