--- a/05_projects/BlazorInterAutoProj/Components/Editor/FolderView.razor
+++ b/05_projects/BlazorInterAutoProj/Components/Editor/FolderView.razor
@@ -56,6 +56,8 @@
 
     protected override async Task OnInitializedAsync()
     {
+        myType = "Folder";
+        formSelectedType = "Text";
         ReloadComponent();
     }
 
