--- a/05_projects/BlazorInterAutoProj/Components/Editor/FolderView.razor
+++ b/05_projects/BlazorInterAutoProj/Components/Editor/FolderView.razor
@@ -11,6 +11,7 @@
     <div>
         <input type="button" value="Folder" @onclick="OnFolderClicked" />
         <input type="button" value="Config" @onclick="ConfigClicked" />
+        <input type="button" value="Terminal" @onclick="TerminalClicked" />
     </div>
 
     <div>
@@ -102,7 +103,7 @@
         var adrTuple = fileService.RepoAddress
              .CreateAddressFromString(Item.Address);
         var itemJson = backendService
-            .CommandApi("CreateItem", adrTuple.Item1, adrTuple.Item2, formAddValue, formSelectedType);
+            .CommandApi("CreateItem", adrTuple.Item1, adrTuple.Item2, formSelectedType, formAddValue);
     }
 
     private void OnFolderClicked()
@@ -118,6 +119,13 @@
         var adrTuple = fileService.RepoAddress
               .CreateAddressFromString(Item.Address);
         var itemJson = backendService.CommandApi("OpenConfig", adrTuple.Item1, adrTuple.Item2);
+    }
+    
+    private void TerminalClicked()
+    {
+        var adrTuple = fileService.RepoAddress
+              .CreateAddressFromString(Item.Address);
+        var itemJson = backendService.CommandApi("OpenTerminal", adrTuple.Item1, adrTuple.Item2);
     }
 
     private void OnBtnClicked(string idxString)
